--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,9 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,prometheus # expose apis for health check and prometheus
-  endpoint:
-    health:
-      show-details: when_authorized
+        include:
+          - "health"
+      base-path: "/"
 
 spring:
   application:
